core/tests/ui/store/relation_tuple_struct_rejected.rs
use appdb::Relation;

#[derive(Relation)]
struct InvalidRelation(i64);

fn main() {}
